@@ -243,6 +243,114 @@ Assuming the use of the `elasticsnapshot` service used above to demonstrate snap
  #
  ```
 
+### Sample Restore
+
+The following is a console log session from an actual restore of the monitoring stack Elasticsearch `logstash` indices from production snapshots using the latest snapshot name at the time of restore (`curator-20151211010005`). The example shows selected indices being restored (default is `all` so this example shows how to restore a subset, which is a more likely scenario). The indices restored in this example are `logstash-2015.06.14,logstash-2015.10.14,logstash-2015.12.11`.
+
+The example uses a fresh docker container started in order to define a snapshot repo that points to the actual (live) repository in the S3 bucket, which can then be used to restore from. In this example the restore repository is called `testing`. It also uses a fresh container on the `monitoring-01` host as it has IAM rights to be able to read from the snapshot (S3) bucket so any alternative host would need similar access.  
+
+To avoid TCP port clash with the monitoring stack, port 9200 is mapped to host port 19200 to allow SSH port forwarding to allow access to the Marvel dashboard to prove document counts, dates, etc once restored. Spinning up a fresh container also proves that in the event the live instance is hosed completely that data can be pulled from snapshots to a brand new one.
+
+Note: a full list of indices within the snapshot has been shortened for the sake of brevity.
+
+```
+(production01)root@monitoring-01:~# docker run -itd -p 19200:9200 registry.service.dsd.io/opguk/elasticsearch:0.1.97
+ce04387a7992ddc6809d5b180ea3f0c56633537959d513874dc21dfb42f7f2a7
+(production01)root@monitoring-01:~#
+(production01)root@monitoring-01:~# docker exec -it ce04387a7992 bash -o vi
+root@ce04387a7992:/# ps -ef
+UID        PID  PPID  C STIME TTY          TIME CMD
+root         1     0  1 12:09 ?        00:00:00 /usr/bin/python3 -u /sbin/my_init
+root        18     1  0 12:09 ?        00:00:00 /usr/bin/runsvdir -P /etc/service
+root        19    18  0 12:09 ?        00:00:00 runsv cron
+root        20    18  0 12:09 ?        00:00:00 runsv syslog-forwarder
+root        21    18  0 12:09 ?        00:00:00 runsv syslog-ng
+root        22    18  0 12:09 ?        00:00:00 runsv beaver
+root        23    18  0 12:09 ?        00:00:00 runsv dnsmasq
+root        24    18  0 12:09 ?        00:00:00 runsv elasticsearch
+root        25    20  0 12:09 ?        00:00:00 tail -f -n 0 /var/log/syslog
+root        26    19  0 12:09 ?        00:00:00 /usr/sbin/cron -f
+root        27    21  0 12:09 ?        00:00:00 syslog-ng -F -p /var/run/syslog-ng.pid --no-caps
+elastic+    28    24 89 12:09 ?        00:00:09 /usr/bin/java -Xms256m -Xmx1g -Djava.awt.headless=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDum
+root        31    23  0 12:09 ?        00:00:00 /usr/sbin/dnsmasq -u root -k
+root       138     0  1 12:09 ?        00:00:00 bash -o vi
+root       144   138  0 12:09 ?        00:00:00 ps -ef
+root@ce04387a7992:/# curator show indices --all-indices
+2015-12-11 12:09:44,897 INFO      Job starting: show indices
+2015-12-11 12:09:44,911 INFO      Matching all indices. Ignoring flags other than --exclude.
+2015-12-11 12:09:44,911 INFO      Matching indices:
+.marvel-2015.12.11
+root@ce04387a7992:/# curl -XPUT http://localhost:9200/_snapshot/testing?verify=false -d '{
+> "type": "s3",
+> "settings": {
+>   "bucket": "opg-backoffice-dbsnapshot-production01",
+>   "base_path": "monitoring-01.production01.sirius-opg.uk/es-snapshots"
+>   }
+> }'
+
+{"acknowledged":true}
+root@ce04387a7992:/# curl -XGET http://localhost:9200/_snapshot/testing/_all?pretty
+{
+  "snapshots" : [ {
+    "snapshot" : "curator-20151210103317",
+    "indices" : [ ".kibana", ".marvel-2015.07.31", ".marvel-2015.08.01", ".marvel-2015.08.02"..............
+    "state" : "SUCCESS",
+    "start_time" : "2015-12-10T10:33:17.133Z",
+    "start_time_in_millis" : 1449743597133,
+    "end_time" : "2015-12-10T17:58:13.906Z",
+    "end_time_in_millis" : 1449770293906,
+    "duration_in_millis" : 26696773,
+    "failures" : [ ],
+    "shards" : {
+      "total" : 1089,
+      "failed" : 0,
+      "successful" : 1089
+    }
+  }, {
+    "snapshot" : "curator-20151211010005",
+    "indices" : [ ".kibana", ".marvel-2015.07.31", ".marvel-2015.08.01", ".marvel-2015.08.02"............
+    "state" : "SUCCESS",
+    "start_time" : "2015-12-11T01:00:06.033Z",
+    "start_time_in_millis" : 1449795606033,
+    "end_time" : "2015-12-11T01:03:22.879Z",
+    "end_time_in_millis" : 1449795802879,
+    "duration_in_millis" : 196846,
+    "failures" : [ ],
+    "shards" : {
+      "total" : 1095,
+      "failed" : 0,
+      "successful" : 1095
+    }
+  } ]
+}
+root@ce04387a7992:/# curl -XPOST "http://localhost:9200/_all/_close?wait_for_completion=true?ignore_unavailable=true"
+
+{"acknowledged":true}
+root@ce04387a7992:/# curl -XPOST "http://localhost:9200/_snapshot/testing/curator-20151211010005/_restore?wait_for_completion=true?ignore_unavailable=true" -d '{
+> "indices": "logstash-2015.06.14,logstash-2015.10.14,logstash-2015.12.11"
+> }'
+
+{"snapshot":{"snapshot":"curator-20151211010005","indices":["logstash-2015.06.14","logstash-2015.12.11","logstash-2015.10.14"],"shards":{"total":15,"failed":0,"successful":15}}}
+root@ce04387a7992:/#
+root@ce04387a7992:/# curl -XPOST "http://localhost:9200/_all/_close?wait_for_completion=true?ignore_unavailable=true"
+
+{"acknowledged":true}
+root@ce04387a7992:/# curl -XPOST "http://localhost:9200/_all/_open?wait_for_completion=true?ignore_unavailable=true"
+
+{"acknowledged":true}
+root@ce04387a7992:/#
+root@ce04387a7992:/# curator show indices --all-indices
+2015-12-11 12:18:29,617 INFO      Job starting: show indices
+2015-12-11 12:18:29,628 INFO      Matching all indices. Ignoring flags other than --exclude.
+2015-12-11 12:18:29,628 INFO      Matching indices:
+.marvel-2015.12.11
+logstash-2015.06.14
+logstash-2015.10.14
+logstash-2015.12.11
+root@ce04387a7992:/#
+root@ce04387a7992:~# exit
+```
+
 ### More Information
 
 For more information on configuring, taking, restoring from and deleting snapshots:
